# canvas-qml

./: CMakeLists.txt  CalcCore.qml  MButton.qml  MyScript.js  MyScript2.js  README.md  main.cpp  main.qml  main.qml.autosave  qml.qrc  rectangle1.qml
ColorPicker/: ColorItem.qml  ColorPicker.qml
Core/: Node.qml  NodeManager.qml
View/: NodeTools.qml  NodeView.qml  SceneView.qml
View/ColorPicker/: ColorItem.qml  ColorPicker.qml
images/: download (1).jfif
